[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/main/CO_MainMenu.gd" type="Script" id=1]
[ext_resource path="res://scenes/core/SC_SceneTransition.tscn" type="PackedScene" id=2]
[ext_resource path="res://fonts/DetailText.tres" type="DynamicFont" id=3]
[ext_resource path="res://fonts/PageTitles.tres" type="DynamicFont" id=4]
[ext_resource path="res://fonts/TextFonts.tres" type="DynamicFont" id=5]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 640.0
margin_bottom = 360.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -58.0
margin_top = -91.5
margin_right = 58.0
margin_bottom = -68.5
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Retro Magic"
align = 1
valign = 1
uppercase = true

[node name="PlayButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -40.0
margin_right = 50.0
margin_bottom = -20.0
custom_fonts/font = ExtResource( 5 )
text = "Play"

[node name="CreditsButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -10.0
margin_right = 50.0
margin_bottom = 10.0
custom_fonts/font = ExtResource( 5 )
text = "Credits"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = 20.0
margin_right = 50.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 5 )
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SceneTransition" parent="." instance=ExtResource( 2 )]

[node name="CreditsPanel" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -78.0
margin_top = -57.0
margin_right = 79.0
margin_bottom = 150.0

[node name="Title" type="Label" parent="CreditsPanel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -31.0
margin_top = 8.0
margin_right = 31.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 5 )
text = "Credits"

[node name="Details" type="RichTextLabel" parent="CreditsPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -69.0
margin_top = -68.5
margin_right = 69.0
margin_bottom = 68.5
custom_fonts/normal_font = ExtResource( 3 )
text = "This is Retro Magic an open source game project created by Kamyab Nazari in part of an educational Project to teach anybody how to use godot."
scroll_active = false

[node name="CloseButton" type="Button" parent="CreditsPanel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -28.0
margin_top = -28.0
margin_right = 28.0
margin_bottom = -4.0
custom_colors/font_color = Color( 1, 0.494118, 0, 1 )
custom_fonts/font = ExtResource( 5 )
text = "Close"

[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="pressed" from="CreditsPanel/CloseButton" to="." method="_on_CloseButton_pressed"]
